Style: Añadir mejoras de UI en Referencias Familiares2

--- a/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
+++ b/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
@@ -22,19 +22,22 @@
                 </p-floatLabel>
             </div>
             <td>
-                <p-auto-complete [(ngModel)]="ref.Parentesco" [suggestions]="filteredItemsParentesco" 
-                  (completeMethod)="filterItemsParentesco($event)" optionLabel="label" placeholder="Parentesco" [dropdown]="true" [disabled]="!isEditMode"v/>
-              </td>
-    
+                <p-auto-complete [(ngModel)]="ref.Parentesco" [suggestions]="filteredItemsParentesco"
+                    (completeMethod)="filterItemsParentesco($event)" optionLabel="label" placeholder="Parentesco"
+                    [dropdown]="true" [disabled]="!isEditMode" />
+            </td>
 
+            <!-- Campo de Correo Electrónico con p-inputGroup -->
             <div class="label-container">
                 <p-floatLabel>
-                    <div class="contacto contacto2">
-                        <span class="p-inputgroup-addon">
-                          <i class="pi pi-envelope"></i>
-                        </span>
-                      </div>
-                    <input pInputText [(ngModel)]="ref.CorreoElectronico" [readonly]="!isEditMode" />
+                    <p-inputGroup>
+                        <div class="correoFamiliar">
+                            <span class="p-inputgroup-addon">
+                                <i class="pi pi-envelope"></i>
+                            </span>
+                        </div>
+                        <input pInputText [(ngModel)]="ref.CorreoElectronico" [readonly]="!isEditMode" />
+                    </p-inputGroup>
                     <label>Correo</label>
                 </p-floatLabel>
             </div>
