--- a/src/app/modules/auth/login.component.scss
+++ b/src/app/modules/auth/login.component.scss
@@ -1,30 +1,36 @@
 /* Diseño general de la página */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+body, html {
+    height: 100%;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    background-color: #f3eeee;
 }
 /* Contenedor principal */
 .main-content {
-    width: 50%;
+    width: 70%;
     border-radius: 20px;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.4);
     display: flex;
     background-color: white;
+    margin-left: 15%;
+    margin-top: 45px;
+    margin-bottom: 85px;
+    border-color: black;
 }
 .login-card{
   background-color: #f9f6f6 !important;
   width: 100%;
-  height: 700%;
+}
+.login-container {
+    width: 100%;
+    height: auto;
 }
 
 /* Lado izquierdo (logo y nombre de empresa) */
 .company__info {
-    background-color: #008080;
+    background-color: #7a91b7;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
     display: flex;
@@ -33,6 +39,7 @@ body {
     align-items: center;
     color: #fff;
     padding: 20px;
+    width: 60%;
 }
 
 .company__logo i {
@@ -46,19 +53,23 @@ body {
     border-bottom-right-radius: 20px;
     padding: 40px;
     width: 100%;
+    height: 400px; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-evenly; 
+
 }
 
 /* Estilo de los campos de entrada */
 .p-float-label {
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
     position: relative;
-    
-    
 }
 
 .form__input {
     width: 100%;
+    height: 40px;
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 5px;
@@ -83,7 +94,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #008080;
+    background-color: #6ee9e9;
     color: white;
 }
 
@@ -102,4 +113,35 @@ body {
     .company__info {
         border-radius: 20px 20px 0 0;
     }
+    
+}
+
+.p-inputtext {
+    width: 90%;           
+    padding: 12px;          
+    border-radius: 5px;    
+    border: 1px solid #ccc;
+    font-size: 16px;    
+    margin-bottom: 30px;
+}
+.login-button {
+    width: 90%;            
+    padding: 12px 0;         
+    font-size: 18px;         
+    border-radius: 5px;      
+    text-transform: uppercase; 
+}
+.login-title {
+    font-family: 'Arial', sans-serif; 
+    font-size: 24px; 
+    font-weight: bold; 
+    margin-bottom: 20px; 
+    text-align: center; 
+    color: #008080; 
+}
+
+.company-logo-image {
+    width: 100%; 
+    max-width: 400px; 
+    height: auto; 
 }
