Agregar validaciones de maximo 10 digitos para los telefonos en el perfil

--- a/src/app/modules/empleado/pages/perfil/perfil.component.html
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.html
@@ -112,7 +112,7 @@
                 </span>
               </div>
               <input pInputText type="text" [(ngModel)]="empleado.Telefono[i]" [readonly]="!isEditMode"
-                placeholder="Teléfono" />
+                placeholder="Teléfono" maxlength="10"/>
               <button pButton icon="pi pi-times" class="p-button-danger" (click)="removePhone(i)"
                 *ngIf="isEditMode"></button>
             </p-inputGroup>
