--- a/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
+++ b/src/app/modules/empleado/pages/perfil/referencias-familiares/referencias-familiares.component.html
@@ -36,9 +36,8 @@
                                 <i class="pi pi-envelope"></i>
                             </span>
                         </div>
-                        <input pInputText [(ngModel)]="ref.CorreoElectronico" [readonly]="!isEditMode" />
+                        <input pInputText [(ngModel)]="ref.CorreoElectronico" [readonly]="!isEditMode" placeholder="Correo Electrónico" />
                     </p-inputGroup>
-                    <label>Correo</label>
                 </p-floatLabel>
             </div>
         </div>
@@ -55,7 +54,7 @@
                     <span class="p-inputgroup-addon">
                         <i class="pi pi-phone"></i>
                     </span>
-                    <input pInputText [(ngModel)]="ref.Telefono[j]" [readonly]="!isEditMode" />
+                    <input pInputText [(ngModel)]="ref.Telefono[j]" [readonly]="!isEditMode" maxlength="10"/>
                     <button pButton icon="pi pi-times" class="p-button-danger" (click)="eliminarTelefono(i, j)"
                         *ngIf="isEditMode"></button>
                 </p-inputGroup>
