Style/ Ultimas modificaciones de estilos en las interfaces

--- a/src/app/modules/empleado/pages/curso-list/curso-list.component.html
+++ b/src/app/modules/empleado/pages/curso-list/curso-list.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <p-card header="Mis cursos Externos">
     <div class="contenedor-botones">
-      <button pButton pRipple severity="primary"  icon="pi pi-plus" (click)="redirigir()">
+      <button pButton pRipple severity="secondary"  icon="pi pi-plus" (click)="redirigir()">
        <span pButtonLabel>Agregar Curso Externo</span>
       </button>
     </div>
