--- a/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.scss
+++ b/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.scss
@@ -28,21 +28,6 @@ input,label, p-autocomplete, p-datepicker {
   justify-content: flex-end;
   margin-top: 2em;
 }
-
-.botonc {
-  background-color: rgb(214, 43, 43) !important; 
-  border: 2px solid rgb(214, 43, 43) !important; 
-  color: white !important; 
-  transition: all 0.3s ease; 
-  width: 80px;
-  border-radius: 5px;
-}
-
-.botonc:hover {
-  background-color: rgb(255, 77, 77) !important; 
-  border-color: rgb(255, 77, 77) !important; 
-}
-
 .custom-checkbox-container .p-checkbox.p-disabled .p-checkbox-box {
   background-color: aqua !important;  /* Color de fondo */
   opacity: 0.3 !important;  /* Opacidad */
@@ -58,3 +43,7 @@ input,label, p-autocomplete, p-datepicker {
   color: rgba(115, 9, 9, 0.7) !important;
   font-weight: bold !important;
 }
+.boton-edicion {
+  margin-right: 10px;
+}
+
