--- a/src/app/modules/empleado/pages/perfil/perfil.component.scss
+++ b/src/app/modules/empleado/pages/perfil/perfil.component.scss
@@ -26,7 +26,7 @@ p-card {
     display: flex;
     justify-content: center;
     padding: 1.5rem 0;
-    background: linear-gradient(135deg, #b6a594, #e0d3bb);
+    background: linear-gradient(135deg, #151961, #131369);
     border-radius: 12px 12px 0 0;
 
     app-foto-perfil {
