--- a/src/app/modules/empleado/pages/curso-list/curso-list.component.scss
+++ b/src/app/modules/empleado/pages/curso-list/curso-list.component.scss
@@ -1,30 +1,67 @@
+.main-container {
+  margin-left: 270px;
+  padding: 20px;
+  transition: margin-left 0.3s ease;
+  /* Suaviza el desplazamiento si el menú es dinámico */
+  margin-right: 60px;
 
-  .main-container {
-    margin-left: 270px;
-    padding: 20px; 
-    transition: margin-left 0.3s ease; /* Suaviza el desplazamiento si el menú es dinámico */
-    margin-right: 60px;
-   
+}
+
+.filtros {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-bottom: 2rem;
+
+  .filtro-item {
+    flex: 1 1 100%; // Ocupa todo el ancho en pantallas pequeñas
   }
-    .contenedor-botones {
-    display: flex;
-    justify-content: flex-end;
 
+  .rango-fechas {
+    flex: 1 1 100%;
   }
 
-  :host ::ng-deep {
-    .p-confirm-dialog {
-      .p-dialog-header {
-        background-color: #f8d7da; // Fondo rojo suave para la cabecera
-        color: #721c24; // Texto oscuro
-      }
-      .p-button.p-button-danger {
-        background-color: #dc3545; // Botón de aceptar en rojo
-        border-color: #dc3545;
-      }
-      .p-button.p-button-secondary {
-        background-color: #6c757d; // Botón de cancelar en gris
-        border-color: #6c757d;
-      }
+  @media (min-width: 768px) {
+    .filtro-item {
+      flex: 0 1 calc(33.333% - 1rem); // 1/3 del ancho en pantallas medianas
+    }
+
+    .rango-fechas {
+      flex: 0 1 calc(66.666% - 1rem); // 2/3 del ancho para el rango de fechas
     }
   }
+
+  .p-float-label {
+    width: 100%;
+
+    input,
+    p-calendar {
+      width: 100%;
+    }
+  }
+}
+
+.contenedor-botones {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+}
+
+:host ::ng-deep {
+  .p-confirm-dialog {
+    .p-dialog-header {
+      background-color: #f8d7da; // Fondo rojo suave para la cabecera
+      color: #721c24; // Texto oscuro
+    }
+
+    .p-button.p-button-danger {
+      background-color: #dc3545; // Botón de aceptar en rojo
+      border-color: #dc3545;
+    }
+
+    .p-button.p-button-secondary {
+      background-color: #6c757d; // Botón de cancelar en gris
+      border-color: #6c757d;
+    }
+  }
+}
