Style: Mejora en la UI de la parte del empleado

--- a/src/app/modules/empleado/pages/curso-list/curso-list.component.html
+++ b/src/app/modules/empleado/pages/curso-list/curso-list.component.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <p-card header="Mis cursos Externos">
+  <p-card header="Mis cursos Externos" class="title">
 
     <!-- Sección de filtros -->
     <div class="filtros">
