--- a/src/app/modules/empleado/pages/ver-actividades/ver-actividades.component.scss
+++ b/src/app/modules/empleado/pages/ver-actividades/ver-actividades.component.scss
@@ -12,6 +12,10 @@
   /* Espacio debajo de los filtros */
 }
 
+label{
+  margin-top: 0.5em;
+}
+
 .contenedor-botones {
   display: flex;
   justify-content: flex-end;
