style/se quito texto del login y se cambiaron los campos de telefono

--- a/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
+++ b/src/app/modules/recursos-humanos/pages/asignar-actividad/asignar-actividad.component.html
@@ -34,6 +34,7 @@
         <tr>
           <th>Actividad</th>
           <th>Nombre del Empleado</th>
+          <th>Clave de Empleado</th>
           <th>Participación</th>
         </tr>
       </ng-template>
@@ -43,6 +44,7 @@
             {{ actividadSeleccionada }}
           </td>
           <td>{{ emp.Nombre }}</td>
+          <td>{{ emp.ClaveEmpleado }}</td>
           <td>
             <p-checkbox 
   [ngModel]="getParticipacion(emp)" 
