--- a/src/app/modules/recursos-humanos/pages/editar-empleado/editar-empleado.component.html
+++ b/src/app/modules/recursos-humanos/pages/editar-empleado/editar-empleado.component.html
@@ -74,7 +74,9 @@
  
   <div *ngFor="let telefono of nuevoEmpleado.Telefono; let j = index; trackBy: trackByFn " class="telefono-item">
     <p-floatlabel variant="on" class="telefono-container">
-      <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="nuevoEmpleado.Telefono[j]"/>
+      <!-- <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="nuevoEmpleado.Telefono[j]"/> -->
+      <input pInputText type="text" [(ngModel)]="nuevoEmpleado.Telefono[j]"
+      placeholder="Teléfono" maxlength="10"/>
       <label for="">Teléfono</label>
     <button pButton *ngIf="nuevoEmpleado.Telefono.length > 1" (click)="eliminarTelefonoU(j)" icon="pi pi-trash" class="p-button-danger p-button-text eliminar-btn" aria-label="Eliminar telefono"></button>
   </p-floatlabel>
@@ -228,7 +230,9 @@
   
         <td>
           <div *ngFor="let telefono of referencia.Telefono; let j = index">
-            <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="referencia.Telefono[j]"  placeholder="Teléfono" />
+           <!--  <p-inputmask  mask="(999) 999-9999" type = "num" [(ngModel)]="referencia.Telefono[j]"  placeholder="Teléfono" /> -->
+            <input pInputText type="text" [(ngModel)]="referencia.Telefono[j]"
+            placeholder="Teléfono" maxlength="10"/>
             <button *ngIf="referencia.Telefono.length > 1" pButton label="Eliminar" (click)="eliminarTelefono(referencia, j)" icon="pi pi-minus" class="p-button-text"></button>
             <small *ngIf="formInvalid && !referencia.Telefono[j]" class="error-text">El teléfono es obligatorio.</small>
           </div>
